<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_height="wrap_content"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:id="@+id/relative_home"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_category"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_category_title"
        android:layout_width="match_parent"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint" />


    <Button
        android:id="@+id/btn_category_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:layout_below="@id/et_category_title"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/save" />
</LinearLayout>
